# voice-calls-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  N8N_SETUP.md  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/db/: database.py  schema.sql
app/routes/: campaigns.py  dashboard.py  webhooks.py
app/services/: batch_engine.py  file_parser.py  n8n_trigger.py  sheets.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: campaign_detail.html  campaigns.html  dashboard.html  import.html  layout.html
